// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighFraudProtectionModal renders the high protection level content with USD store currency in the modal body 1`] = `
<div
  class="components-modal__content"
  role="document"
>
  <div
    class="components-modal__header"
  >
    <div
      class="components-modal__header-heading-container"
    >
      <h1
        class="components-modal__header-heading"
        id="components-modal-header-0"
      >
        High filter level
      </h1>
    </div>
    <button
      aria-label="Close dialog"
      class="components-button has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
  <div
    class="components-modal__body--fraud-protection"
  >
    <div
      class="component-notice--is-info components-notice is-info"
    >
      <div
        class="components-notice__content"
      >
        <div
          class="component-notice__content--flex"
        >
          <svg
            aria-hidden="true"
            class="component-notice__icon"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
            />
          </svg>
          <p>
            Offers the highest level of filtering for stores, but may catch some legitimate transactions.
          </p>
        </div>
      </div>
    </div>
    <p>
      Payments will be 
      <span
        class="component-modal__text--blocked"
      >
        blocked
      </span>
       if:
    </p>
    <ul>
      <li>
        The billing address does not match what is on file with the card issuer.
      </li>
      <li>
        The card's issuing bank cannot verify the CVV.
      </li>
      <li>
        An order originates from an IP address outside your country
      </li>
      <li>
        An order exceeds 
        <strong>
          $1,000.00 USD
        </strong>
        .
      </li>
    </ul>
    <p>
      Payments will be 
      <span
        class="component-modal__text--review"
      >
        authorized and held for review
      </span>
       if:
    </p>
    <ul>
      <li>
        An order has less than 
        <strong>
          2 items
        </strong>
         or more than 
        <strong>
          10 items.
        </strong>
      </li>
      <li>
        The shipping and billing addresses don't match.
      </li>
      <li>
        The billing address country doesn't match the country resolved from the IP address.
      </li>
    </ul>
    <button
      class="components-button component-modal__button--confirm is-tertiary"
      type="button"
    >
      Got it
    </button>
  </div>
</div>
`;

exports[`HighFraudProtectionModal renders the high protection level content with non-USD store currency in the modal body 1`] = `
<div
  class="components-modal__content"
  role="document"
>
  <div
    class="components-modal__header"
  >
    <div
      class="components-modal__header-heading-container"
    >
      <h1
        class="components-modal__header-heading"
        id="components-modal-header-1"
      >
        High filter level
      </h1>
    </div>
    <button
      aria-label="Close dialog"
      class="components-button has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
  <div
    class="components-modal__body--fraud-protection"
  >
    <div
      class="component-notice--is-info components-notice is-info"
    >
      <div
        class="components-notice__content"
      >
        <div
          class="component-notice__content--flex"
        >
          <svg
            aria-hidden="true"
            class="component-notice__icon"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
            />
          </svg>
          <p>
            Offers the highest level of filtering for stores, but may catch some legitimate transactions.
          </p>
        </div>
      </div>
    </div>
    <p>
      Payments will be 
      <span
        class="component-modal__text--blocked"
      >
        blocked
      </span>
       if:
    </p>
    <ul>
      <li>
        The billing address does not match what is on file with the card issuer.
      </li>
      <li>
        The card's issuing bank cannot verify the CVV.
      </li>
      <li>
        An order originates from an IP address outside your country
      </li>
      <li>
        An order exceeds the equivalent of 
        <strong>
          $1,000.00 USD
        </strong>
         in Euro.
      </li>
    </ul>
    <p>
      Payments will be 
      <span
        class="component-modal__text--review"
      >
        authorized and held for review
      </span>
       if:
    </p>
    <ul>
      <li>
        An order has less than 
        <strong>
          2 items
        </strong>
         or more than 
        <strong>
          10 items.
        </strong>
      </li>
      <li>
        The shipping and billing addresses don't match.
      </li>
      <li>
        The billing address country doesn't match the country resolved from the IP address.
      </li>
    </ul>
    <button
      class="components-button component-modal__button--confirm is-tertiary"
      type="button"
    >
      Got it
    </button>
  </div>
</div>
`;

exports[`StandardFraudProtectionModal renders the standard protection level content with USD store currency in the modal body 1`] = `
<div
  class="components-modal__content"
  role="document"
>
  <div
    class="components-modal__header"
  >
    <div
      class="components-modal__header-heading-container"
    >
      <h1
        class="components-modal__header-heading"
        id="components-modal-header-5"
      >
        Standard filter level
      </h1>
    </div>
    <button
      aria-label="Close dialog"
      class="components-button has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
  <div
    class="components-modal__body--fraud-protection"
  >
    <div
      class="component-notice--is-info components-notice is-info"
    >
      <div
        class="components-notice__content"
      >
        <div
          class="component-notice__content--flex"
        >
          <svg
            aria-hidden="true"
            class="component-notice__icon"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
            />
          </svg>
          <p>
            Provides a standard level of filtering that's suitable for most business.
          </p>
        </div>
      </div>
    </div>
    <p>
      Payments will be 
      <span
        class="component-modal__text--blocked"
      >
        blocked
      </span>
       if:
    </p>
    <ul>
      <li>
        The billing address does not match what is on file with the card issuer.
      </li>
      <li>
        The card's issuing bank cannot verify the CVV.
      </li>
    </ul>
    <p>
      Payments will be 
      <span
        class="component-modal__text--review"
      >
        authorized and held for review
      </span>
       if:
    </p>
    <ul>
      <li>
        An order originates from an IP address outside your country.
      </li>
      <li>
        The billing address country doesn't match the country resolved from the IP address.
      </li>
      <li>
        An order exceeds 
        <strong>
          $1,000.00 USD
        </strong>
         or 
        <strong>
          10 items.
        </strong>
      </li>
    </ul>
    <button
      class="components-button component-modal__button--confirm is-tertiary"
      type="button"
    >
      Got it
    </button>
  </div>
</div>
`;

exports[`StandardFraudProtectionModal renders the standard protection level content with non-USD store currency in the modal body 1`] = `
<div
  class="components-modal__content"
  role="document"
>
  <div
    class="components-modal__header"
  >
    <div
      class="components-modal__header-heading-container"
    >
      <h1
        class="components-modal__header-heading"
        id="components-modal-header-6"
      >
        Standard filter level
      </h1>
    </div>
    <button
      aria-label="Close dialog"
      class="components-button has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
  <div
    class="components-modal__body--fraud-protection"
  >
    <div
      class="component-notice--is-info components-notice is-info"
    >
      <div
        class="components-notice__content"
      >
        <div
          class="component-notice__content--flex"
        >
          <svg
            aria-hidden="true"
            class="component-notice__icon"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
            />
          </svg>
          <p>
            Provides a standard level of filtering that's suitable for most business.
          </p>
        </div>
      </div>
    </div>
    <p>
      Payments will be 
      <span
        class="component-modal__text--blocked"
      >
        blocked
      </span>
       if:
    </p>
    <ul>
      <li>
        The billing address does not match what is on file with the card issuer.
      </li>
      <li>
        The card's issuing bank cannot verify the CVV.
      </li>
    </ul>
    <p>
      Payments will be 
      <span
        class="component-modal__text--review"
      >
        authorized and held for review
      </span>
       if:
    </p>
    <ul>
      <li>
        An order originates from an IP address outside your country.
      </li>
      <li>
        The billing address country doesn't match the country resolved from the IP address.
      </li>
      <li>
        An order exceeds the equivalent of 
        <strong>
          $1,000.00 USD
        </strong>
         in Euro or 
        <strong>
          10 items.
        </strong>
      </li>
    </ul>
    <button
      class="components-button component-modal__button--confirm is-tertiary"
      type="button"
    >
      Got it
    </button>
  </div>
</div>
`;
